--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         target:
           - x86_64-unknown-linux-gnu
           #- x86_64-apple-darwin
-          - aarch64-unknown-linux-gnu
+          #- aarch64-unknown-linux-gnu
           #- aarch64-apple-darwin
           #- armv7-unknown-linux-gnueabihf
           #- x86_64-pc-windows-gnu
@@ -36,6 +36,11 @@ jobs:
       - name: Build native executable
         run: |
           cross build --release --target ${{ matrix.target }}
+      - name: Show built wasmcloud_provider
+        working-directory: /home/runner/work/mlinference-provider/mlinference-provider
+        run: |
+          var=$(ls *.par.gz)
+          echo "These files are in '/home/runner/work/mlinference-provider/mlinference-provider': $var"
       - name: Upload executable to GH Actions
         uses: actions/upload-artifact@v3
         with:
@@ -61,13 +66,13 @@ jobs:
           mkdir -p target/release
           mv x86_64-unknown-linux-gnu/${{ env.artifact-name }} target/release/
           make par
-      - name: Fill provider archive with binaries
-        run: |
-          #wash par insert --arch x86_64-macos   --binary x86_64-apple-darwin/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
-          wash par insert --arch aarch64-linux  --binary aarch64-unknown-linux-gnu/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
-          #wash par insert --arch aarch64-macos  --binary aarch64-apple-darwin/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
-          #wash par insert --arch armv7-linux    --binary armv7-unknown-linux-gnueabihf/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
-          #wash par insert --arch x86_64-windows --binary x86_64-pc-windows-gnu/${{ env.artifact-name }}.exe build/${{ env.artifact-name }}.par.gz
+      # - name: Fill provider archive with binaries
+      #   run: |
+      #     wash par insert --arch x86_64-macos   --binary x86_64-apple-darwin/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
+      #     wash par insert --arch aarch64-linux  --binary aarch64-unknown-linux-gnu/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
+      #     wash par insert --arch aarch64-macos  --binary aarch64-apple-darwin/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
+      #     wash par insert --arch armv7-linux    --binary armv7-unknown-linux-gnueabihf/${{ env.artifact-name }} build/${{ env.artifact-name }}.par.gz
+      #     wash par insert --arch x86_64-windows --binary x86_64-pc-windows-gnu/${{ env.artifact-name }}.exe build/${{ env.artifact-name }}.par.gz
       - name: Upload provider archive to GH Actions
         uses: actions/upload-artifact@v2
         with:
