--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,5 +48,5 @@ name = "wasmcloud_provider_mlinference"
 path = "src/lib.rs"
 
 [[bin]]
-name = "mlinference"
+name = "wasmcloud_provider_mlinference"
 path = "bin/main.rs"
