--- a/Cross.toml
+++ b/Cross.toml
@@ -1,3 +1,7 @@
+[build.env]
+volumes = ["XDG_CACHE_HOME"]
+passthrough = ["XDG_CACHE_HOME"]
+
 [target.armv7-unknown-linux-gnueabihf]
 image = "wasmcloud/cross:armv7-unknown-linux-gnueabihf"
 
@@ -12,8 +16,3 @@ image = "wasmcloud/cross:aarch64-apple-darwin"
 
 [target.x86_64-unknown-linux-gnu]
 image = "wasmcloud/cross:x86_64-unknown-linux-gnu"
-
-[build.env]
-passthrough = [
-    "XDG_CACHE_HOME",
-]
